package com.dev.alan.patterns.behavioral.strategy;

public interface PaymentStrategy {
    void pay(double amount);
}
